code/java/OFDB/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# OFDB client library for Java

[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/ofdb)](https://search.maven.org/artifact/com.factset.sdk/ofdb)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

OFDB api

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- Package version: 0.21.4
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.0.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>ofdb</artifactId>
  <version>0.21.4</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.0.0"
    implementation "com.factset.sdk:ofdb:0.21.4"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

```java
import com.factset.sdk.OFDB.*;
import com.factset.sdk.OFDB.auth.*;
import com.factset.sdk.OFDB.models.*;
import com.factset.sdk.OFDB.api.CreateApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class CreateApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        CreateApi apiInstance = new CreateApi(defaultClient);
        String path = "path_example"; // String | Encode database path
        AddSymbolDate addSymbolDate = new AddSymbolDate(); // AddSymbolDate | Required data for creating date in the database. At least one iterative field is required otherwise it will throw 400.
        try {
            SuccessPostResponse result = apiInstance.addSymbolDate(path, addSymbolDate);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling CreateApi#addSymbolDate");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.OFDB.*;
import com.factset.sdk.OFDB.api.CreateApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

CreateApi apiInstance = new CreateApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.OFDB.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/ofdb*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CreateApi* | [**addSymbolDate**](docs/CreateApi.md#addSymbolDate) | **POST** /v1/database/{path}/dates | 
*CreateApi* | [**addSymbolDate3D**](docs/CreateApi.md#addSymbolDate3D) | **POST** /v1/database/{path}/dates/{date}/symbols | 
*CreateApi* | [**addSymbols**](docs/CreateApi.md#addSymbols) | **POST** /v1/database/{path}/symbols | 
*CreateApi* | [**createDatabase**](docs/CreateApi.md#createDatabase) | **POST** /v1/database/ | 
*ModifyApi* | [**deleteDates**](docs/ModifyApi.md#deleteDates) | **DELETE** /v1/database/{path}/dates/{date} | 
*ModifyApi* | [**deleteSymbolDate3D**](docs/ModifyApi.md#deleteSymbolDate3D) | **DELETE** /v1/database/{path}/dates/{date}/symbols/{symbol} | 
*ModifyApi* | [**deleteSymbols**](docs/ModifyApi.md#deleteSymbols) | **DELETE** /v1/database/{path}/symbols/{symbol} | 
*ModifyApi* | [**updateSymbolDate**](docs/ModifyApi.md#updateSymbolDate) | **PUT** /v1/database/{path}/dates/{date} | 
*ModifyApi* | [**updateSymbolDate3D**](docs/ModifyApi.md#updateSymbolDate3D) | **PUT** /v1/database/{path}/dates/{date}/symbols/{symbol} | 
*ModifyApi* | [**updateSymbols**](docs/ModifyApi.md#updateSymbols) | **PUT** /v1/database/{path}/symbols/{symbol} | 
*ViewApi* | [**getDatabase**](docs/ViewApi.md#getDatabase) | **GET** /v1/database/{path} | 
*ViewApi* | [**getDates**](docs/ViewApi.md#getDates) | **GET** /v1/database/{path}/dates | 
*ViewApi* | [**getFields**](docs/ViewApi.md#getFields) | **GET** /v1/database/{path}/fields | 
*ViewApi* | [**getSymbols**](docs/ViewApi.md#getSymbols) | **GET** /v1/database/{path}/symbols | 


## Documentation for Models

 - [AddDatabase](docs/AddDatabase.md)
 - [AddSymbolDate](docs/AddSymbolDate.md)
 - [AddSymbolDate3D](docs/AddSymbolDate3D.md)
 - [AddSymbolDate3DData](docs/AddSymbolDate3DData.md)
 - [AddSymbolDateData](docs/AddSymbolDateData.md)
 - [AddSymbols](docs/AddSymbols.md)
 - [AddSymbolsData](docs/AddSymbolsData.md)
 - [DatabaseSchema](docs/DatabaseSchema.md)
 - [InlineResponse202](docs/InlineResponse202.md)
 - [InlineResponse400](docs/InlineResponse400.md)
 - [InlineResponse400Errors](docs/InlineResponse400Errors.md)
 - [InlineResponse400Source](docs/InlineResponse400Source.md)
 - [InlineResponse403](docs/InlineResponse403.md)
 - [InlineResponse403Errors](docs/InlineResponse403Errors.md)
 - [InlineResponse404](docs/InlineResponse404.md)
 - [InlineResponse404Errors](docs/InlineResponse404Errors.md)
 - [InlineResponse413](docs/InlineResponse413.md)
 - [InlineResponse413Errors](docs/InlineResponse413Errors.md)
 - [InlineResponse429](docs/InlineResponse429.md)
 - [InlineResponse429Errors](docs/InlineResponse429Errors.md)
 - [SuccessPostResponse](docs/SuccessPostResponse.md)
 - [UpdateSymbolDate](docs/UpdateSymbolDate.md)
 - [UpdateSymbolDate3D](docs/UpdateSymbolDate3D.md)
 - [UpdateSymbolDate3DData](docs/UpdateSymbolDate3DData.md)
 - [UpdateSymbols](docs/UpdateSymbols.md)
 - [UpdateSymbolsData](docs/UpdateSymbolsData.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
